commit pertama